# Conquer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wc/conquer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/driver/: Kconfig  freg.c  freg.h
app/src/main/cpp/primer/: primer.cpp
app/src/main/java/com/wc/conquer/: MainActivity.kt
app/src/test/java/com/wc/conquer/: ExampleUnitTest.kt
breakpad-build/: build.gradle
breakpad-build/src/androidTest/java/com/wc/breakpad_build/: ExampleInstrumentedTest.java
breakpad-build/src/main/: AndroidManifest.xml
breakpad-build/src/main/cpp/: CMakeLists.txt  breakpad.cpp
breakpad-build/src/main/java/com/wc/breakpad/: BreakpadInit.java
breakpad-build/src/main/res/values/: strings.xml
breakpad-build/src/test/java/com/wc/breakpad_build/: ExampleUnitTest.java
gen-jni-libs/src/androidTest/java/com/wc/gen_jni_libs/: ExampleInstrumentedTest.java
gen-jni-libs/src/main/: AndroidManifest.xml
gen-jni-libs/src/main/res/values/: strings.xml
gen-jni-libs/src/test/java/com/wc/gen_jni_libs/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tools/mac/: minidump_stackwalk
